--- a/Praktikum-1/Praktikum-1.Rmd
+++ b/Praktikum-1/Praktikum-1.Rmd
@@ -1,4 +1,243 @@
-```{r}
-x<-123
+---
+title: "Tugas Pertemuan 1"
+author: "Yasmin Azimah"
+date: "2023-06-04"
+output: html_document
+---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
+
+```{r}
+library("forecast")
+library("graphics")
+library("TTR")
+library("TSA")
+```
+
+## Impor Data
+```{r}
+library(rio)
+data <- import("https://raw.githubusercontent.com/yasminazimah/MPDW//main/data/Data1.csv")
+```
+Data yang digunakan adalah data mingguan mengenai jumlah orang meninggal yang diakibatkan oleh penyakit Alzheimer di kota Washington pada tahun 2020-2022.
+
+```{r}
+View(data)
+str(data)
+dim(data)
+```
+Mengubah data agar terbaca sebagai data deret waktu dengan fungsi `ts()` .
+```{r}
+data.ts <- ts(data$Jumlah_Kematian)
+```
+
+Menampilkan ringkasan data
+```{r}
+summary(data.ts)
+```
+
+Membuat plot data deret waktu
+```{r}
+ts.plot(data.ts, xlab="Time Period ", ylab="Jumlah_Kematian", 
+        main = "Time Series Plot")
+points(data.ts)
+```
+Plot yang ditampilkan menunjukkan bahwa data time series yang digunakan memiliki pola konstan.
+
+## Single Moving Average
+
+### Pembagian Data
+Pembagian data latih dan data uji dilakukan dengan perbandingan 80% data latih dan 20% data uji.
+```{r}
+#membagi data latih dan data uji
+training <- data[1:126,]
+testing <- data[127:157,]
+training.ts <- ts(training$Jumlah_Kematian)
+testing.ts <- ts(testing$Jumlah_Kematian)
+```
+
+### Eksplorasi Data
+
+Dilakukan pada keseluruhan data, data latih, dan data uji menggunakan plot data deret waktu.
+```{r}
+#eksplorasi keseluruhan data
+plot(data.ts, col="red",main="Plot semua data")
+points(data.ts)
+
+#eksplorasi data latih
+plot(training.ts, col="blue",main="Plot data latih")
+points(training.ts)
+
+#eksplorasi data uji
+plot(testing.ts, col="blue",main="Plot data uji")
+points(testing.ts)
+```
+Eksplorasi juga dapat dilakukan menggunakan package `ggplot2` .
+```{r}
+#Eksplorasi dengan GGPLOT
+library(ggplot2)
+ggplot() + 
+  geom_line(data = training, aes(x = Periode, y = Jumlah_Kematian, col = "Data Latih")) +
+  geom_line(data = testing, aes(x = Periode, y = Jumlah_Kematian, col = "Data Uji")) +
+  labs(x = "Periode Waktu", y = "Jumlah_Kematian", color = "Legend") +
+  scale_colour_manual(name="Keterangan:", breaks = c("Data Latih", "Data Uji"),
+                      values = c("blue", "red")) + 
+  theme_bw() + theme(legend.position = "bottom",
+                     plot.caption = element_text(hjust=0.5, size=12))
+```
+
+### Single Moving Average (SMA)
+
+Ide dasar dari Single Moving Average (SMA) adalah data suatu periode dipengaruhi oleh data periode sebelumnya. Metode pemulusan ini cocok digunakan untuk pola data stasioner atau konstan. Data pemulusan pada periode ke-t merupakan rata rata dari m buah data pada periode ke-t hingga periode ke (t-m+1). Data pemulusan pada periode ke-t selanjutnya digunakan sebagai nilai peramalan pada periode ke t+1
+
+Pemulusan menggunakan metode SMA dilakukan dengan fungsi `SMA()`.
+
+```{r}
+data.sma<-SMA(training.ts)
+data.sma
+```
+
+Data pemulusan pada periode ke-t selanjutnya digunakan sebagai nilai peramalan pada periode ke t+1 sehingga hasil peramalan 1 periode kedepan adalah sebagai berikut.
+
+```{r}
+data.ramal<-c(NA,data.sma)
+data.ramal #forecast 1 periode ke depan
+```
+
+Selanjutnya akan dilakukan peramalan sejumlah data uji yaitu 32 periode. 
+
+```{r}
+data.gab<-cbind(aktual=c(training.ts,rep(NA,32)),pemulusan=c(data.sma,rep(NA,32)),ramalan=c(data.ramal,rep(data.ramal[length(data.ramal)],31)))
+data.gab #forecast 32 periode ke depan
+```
+
+Plot data deret waktu dari hasil peramalan yang dilakukan:
+
+```{r}
+ts.plot(data.ts, xlab="Time Period ", ylab="Jumlah_Kematian", main= "SMA N=11 Data Jumlah Kematian")
+points(data.ts)
+lines(data.gab[,2],col="green",lwd=2)
+lines(data.gab[,3],col="red",lwd=2)
+legend("topleft",c("data aktual","data pemulusan","data peramalan"), lty=8, col=c("black","green","red"), cex=0.5)
+```
+
+Selanjutnya perhitungan akurasi dilakukan dengan ukuran akurasi *Sum Squares Error* (SSE), *Mean Square Error* (MSE) dan *Mean Absolute Percentage Error* (MAPE). Perhitungan akurasi dilakukan baik pada data latih maupun pada data uji.
+
+```{r}
+#Menghitung nilai keakuratan data latih
+error_train.sma = training.ts-data.ramal[1:length(training.ts)]
+SSE_train.sma = sum(error_train.sma[12:length(training.ts)]^2)
+MSE_train.sma = mean(error_train.sma[12:length(training.ts)]^2)
+MAPE_train.sma = mean(abs((error_train.sma[12:length(training.ts)]/training.ts[12:length(training.ts)])*100))
+
+akurasi_train.sma <- matrix(c(SSE_train.sma, MSE_train.sma, MAPE_train.sma))
+row.names(akurasi_train.sma)<- c("SSE", "MSE", "MAPE")
+colnames(akurasi_train.sma) <- c("Akurasi m = 11")
+akurasi_train.sma
+```
+Dalam hal ini nilai MAPE data latih pada metode pemulusan SMA kurang dari 2%, nilai ini dapat dikategorikan sebagai nilai akurasi yang sangat baik. 
+
+```{r}
+#Menghitung nilai keakuratan data uji
+error_test.sma = testing.ts-data.gab[127:157,3]
+SSE_test.sma = sum(error_test.sma^2)
+MSE_test.sma = mean(error_test.sma^2)
+MAPE_test.sma = mean(abs((error_test.sma/testing.ts*100)))
+
+akurasi_test.sma <- matrix(c(SSE_test.sma, MSE_test.sma, MAPE_test.sma))
+row.names(akurasi_test.sma)<- c("SSE", "MSE", "MAPE")
+colnames(akurasi_test.sma) <- c("Akurasi m = 11")
+akurasi_test.sma
+```
+
+Perhitungan akurasi menggunakan data latih menghasilkan nilai MAPE yang kurang dari 10% sehingga nilai akurasi ini dapat dikategorikan sebagai sangat baik.
+
+## Single Exponential Smoothing
+Single Exponential Smoothing merupakan metode pemulusan yang tepat digunakan untuk data dengan pola stasioner atau konstan.
+
+```{r}
+#Cara 1 (fungsi ses)
+ses.1 <- ses(training.ts, h = 10, alpha = 0.2)
+plot(ses.1)
+ses.1
+
+ses.2<- ses(training.ts, h = 10, alpha = 0.7)
+plot(ses.2)
+ses.2
+```
+
+```{r}
+autoplot(ses.1) +
+  autolayer(fitted(ses.1), series="Fitted") +
+  ylab("Kematian") + xlab("Periode")
+```
+
+```{r}
+#Cara 2 (fungsi Holtwinter)
+ses1<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE, alpha = 0.2)
+plot(ses1)
+
+#ramalan
+ramalan1<- forecast(ses1, h=10)
+ramalan1
+
+ses2<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE, alpha = 0.7)
+plot(ses2)
+
+#ramalan
+ramalan2<- forecast(ses2, h=10)
+ramalan2
+```
+
+```{r}
+#SES
+ses.opt <- ses(training.ts, h = 10, alpha = NULL)
+plot(ses.opt)
+ses.opt
+
+#Lamda Optimum Holt Winter
+sesopt<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE,alpha = NULL)
+sesopt
+plot(sesopt)
+
+#ramalan
+ramalanopt<- forecast(sesopt, h=10)
+ramalanopt
+```
+
+Perhitungan keakuratan hasil peramalan:
+
+#### Akurasi Data Latih
+
+```{r}
+#Keakuratan Metode
+#Pada data training
+SSE1<-ses1$SSE
+MSE1<-ses1$SSE/length(training.ts)
+RMSE1<-sqrt(MSE1)
+
+akurasi1 <- matrix(c(SSE1,MSE1,RMSE1))
+row.names(akurasi1)<- c("SSE", "MSE", "RMSE")
+colnames(akurasi1) <- c("Akurasi lamda=0.2")
+akurasi1
+
+SSE2<-ses2$SSE
+MSE2<-ses2$SSE/length(training.ts)
+RMSE2<-sqrt(MSE2)
+
+akurasi2 <- matrix(c(SSE2,MSE2,RMSE2))
+row.names(akurasi2)<- c("SSE", "MSE", "RMSE")
+colnames(akurasi2) <- c("Akurasi lamda=0.7")
+akurasi2
+
+```
+Berdasarkan nilai SSE, MSE, RMSE, dan MAPE di antara kedua parameter, nilai parameter $\lambda=0,2$ menghasilkan akurasi yang lebih baik dibanding $\lambda=0,7$ . Hal ini dilihat dari nilai masing-masing ukuran akurasi yang lebih kecil. Berdasarkan nilai MAPE-nya, hasil ini dapat dikategorikan sebagai peramalan sangat baik.
+
+
+#### Akurasi Data Uji
+
+```{r}
+accuracy(ramalanopt,testing$Yt)
 ```
