--- a/Praktikum-1/Praktikum-1.Rmd
+++ b/Praktikum-1/Praktikum-1.Rmd
@@ -4,9 +4,6 @@ author: "Yasmin Azimah"
 date: "2023-06-04"
 output: html_document
 ---
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 ```{r}
 library("forecast")
@@ -152,86 +149,48 @@ Single Exponential Smoothing merupakan metode pemulusan yang tepat digunakan unt
 
 ```{r}
 #Cara 1 (fungsi ses)
-ses.1 <- ses(training.ts, h = 10, alpha = 0.2)
+ses.1 <- ses(training.ts, h = 32, alpha = NULL)
 plot(ses.1)
 ses.1
 
-ses.2<- ses(training.ts, h = 10, alpha = 0.7)
-plot(ses.2)
-ses.2
 ```
 
 ```{r}
 autoplot(ses.1) +
   autolayer(fitted(ses.1), series="Fitted") +
-  ylab("Kematian") + xlab("Periode")
+  ylab("Jumlah Kematian") + xlab("Periode")
 ```
 
 ```{r}
 #Cara 2 (fungsi Holtwinter)
-ses1<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE, alpha = 0.2)
-plot(ses1)
+ses.2<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE, alpha = NULL)
+plot(ses.2)
 
 #ramalan
-ramalan1<- forecast(ses1, h=10)
-ramalan1
-
-ses2<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE, alpha = 0.7)
-plot(ses2)
-
-#ramalan
-ramalan2<- forecast(ses2, h=10)
-ramalan2
-```
-
-```{r}
-#SES
-ses.opt <- ses(training.ts, h = 10, alpha = NULL)
-plot(ses.opt)
-ses.opt
-
-#Lamda Optimum Holt Winter
-sesopt<- HoltWinters(training.ts, gamma = FALSE, beta = FALSE,alpha = NULL)
-sesopt
-plot(sesopt)
-
-#ramalan
-ramalanopt<- forecast(sesopt, h=10)
-ramalanopt
+ramalan<- forecast(ses.2, h=32)
+ramalan
 ```
 
 Perhitungan keakuratan hasil peramalan:
-
 #### Akurasi Data Latih
 
 ```{r}
 #Keakuratan Metode
 #Pada data training
-SSE1<-ses1$SSE
-MSE1<-ses1$SSE/length(training.ts)
-RMSE1<-sqrt(MSE1)
-
-akurasi1 <- matrix(c(SSE1,MSE1,RMSE1))
-row.names(akurasi1)<- c("SSE", "MSE", "RMSE")
-colnames(akurasi1) <- c("Akurasi lamda=0.2")
-akurasi1
-
-SSE2<-ses2$SSE
-MSE2<-ses2$SSE/length(training.ts)
+SSE2<-ses.2$SSE
+MSE2<-ses.2$SSE/length(training.ts)
 RMSE2<-sqrt(MSE2)
 
-akurasi2 <- matrix(c(SSE2,MSE2,RMSE2))
-row.names(akurasi2)<- c("SSE", "MSE", "RMSE")
-colnames(akurasi2) <- c("Akurasi lamda=0.7")
-akurasi2
+akurasi <- matrix(c(SSE2,MSE2,RMSE2))
+row.names(akurasi)<- c("SSE", "MSE", "RMSE")
+colnames(akurasi) <- c("Akurasi lamda = NULL")
+akurasi
 
 ```
-Berdasarkan nilai SSE, MSE, RMSE, dan MAPE di antara kedua parameter, nilai parameter $\lambda=0,2$ menghasilkan akurasi yang lebih baik dibanding $\lambda=0,7$ . Hal ini dilihat dari nilai masing-masing ukuran akurasi yang lebih kecil. Berdasarkan nilai MAPE-nya, hasil ini dapat dikategorikan sebagai peramalan sangat baik.
-
-
 #### Akurasi Data Uji
 
 ```{r}
-accuracy(ramalanopt,testing$Yt)
+accuracy(ramalan,testing$Jumlah_Kematian)
 
 ```
+
