--- a/Praktikum-1/Praktikum-1.Rmd
+++ b/Praktikum-1/Praktikum-1.Rmd
@@ -198,4 +198,4 @@ training dan 9.178951 untuk data testing. Sementara itu, pada metode
 pemulusan SES dihasilkan nilai MAPE sebesar 10.869323 untuk data training
 dan 9.617125 untuk data testing. Dapat disimpulkan bahwa pada data
 training, metode SES lebih baik dibandingkan dengan metode SMA, sedangkan
-pada data testing, metode sma lebih baik dibandingkan SES.
+pada data testing, metode SMA lebih baik dibandingkan SES.
