--- a/Praktikum-2/Tugas Pertemuan 2.Rmd
+++ b/Praktikum-2/Tugas Pertemuan 2.Rmd
@@ -1,37 +1,243 @@
 ---
 title: "Tugas Pertemuan 2"
-author: "Yasmin Azimah"
+author: "Yasmin Azimah Wafa"
 date: "2023-09-08"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
+##Library
 ```{r}
-library(TTR)d
+library(dplyr)
+library(TTR)
 library(forecast)
 library(lmtest) #digunakan untuk uji formal pendeteksian autokorelasi
 library(orcutt) #untuk membuat model regresi Cochrane-Orcutt
 library(HoRM) #untuk membuat model regresi Hildreth-Lu
+library(graphics)
+library(TSA)
+library(rio)
+library(ggplot2)
+library(corrplot)
+library(RColorBrewer)
+library(scales)
 ```
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+## Input Data
+Data yang digunakan adalah data CO2 Emissions from Fossil Fuels di United Kingdom pada tahun 1968-2014. Dengan peubah y yaitu jumlah Bunker fuels, kemudian x1 yaitu Tahun, x2 yaitu Total, dan X3 yaitu Emisi karbon per capita.
+```{r}
+library(readxl)
+data <- read_excel("~/MPDW/Data2.xlsx", 
+    sheet = "Sheet2")
+View(data)
+summary(data)
 ```
 
-## Including Plots
+## Exploratory Analysis on Respose Variable (Harga)
+```{r}
+# Matriks korelasi
+m <- cor(data) 
 
-You can also embed plots, for example:
+colors <- alpha(colorRampPalette(c("blue", #Warna Bawah
+                                   "#dbdbdb", #Warna Tengah
+                                   "red"))(10), #Warna Atas
+                                   alpha = 0.80) #Transparan
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+corrplot(m, method = 'ellipse', type='lower', order='original', col=colors)
+corrplot(m, add=TRUE, method = 'number', type='upper', order='original',
+         tl.pos = "lt", 
+         tl.col = "black", col=colors)
+```
+### Time Series Plot
+```{r}
+#Membentuk objek time series
+data.ts <- ts(data$Bunker_fuels)
+
+#Plot time series
+ts.plot(data.ts, xlab = "Time Period",
+        ylab = "Bunker fuels", 
+        main = "Time Series Plot of Bunker fuels")
+points(data.ts)
+```
+Plot time series di atas berpola tren. 
+
+## Regresi
+```{r}
+#Pembuatan Model Regresi
+#model regresi
+model<- lm(Bunker_fuels~Year+Total+Per_Capita, data = data)
+summary(model)
+```
+$$y_i = -2.092e+e+05+1.000e+02+6.036e-01-2.827e+04$$
+Berdasarkan ringkasan model dapat diketahui bahwa hasil uji F memiliki *p-value* \< $\alpha$ (5%). Artinya, minimal terdapat satu variabel yang berpengaruh nyata terhadap model.
+
+Selanjutnya dapat dilihat juga nilai $R^2=0.8761$. Artinya, sebesar 87.61% keragaman jumlah Bunkel fuels dapat dijelaskan oleh peubah Tahun, Total, dan Per capita. Hasil ini menunjukkan hasil yang bagus, seolah mendapatkan hasil terbaik. Namun, kita perlu melakukan uji terhadap sisaannya seperti berikut ini.
+
+```{r}
+#sisaan dan fitted value
+sisaan<- residuals(model)
+fitValue<- predict(model)
+
+#Diagnostik dengan eksploratif
+par(mfrow = c(1,1))
+qqnorm(sisaan)
+
+qqline(sisaan, col = "steelblue", lwd = 2)
+plot(fitValue, sisaan, col = "steelblue", pch = 20, xlab = "Sisaan", ylab = "Fitted Values", main = "Sisaan vs Fitted Values")
+abline(a = 0, b = 0, lwd = 2)
+
+hist(sisaan, col = "steelblue")
+
+plot(seq(1,47,1), sisaan, col = "steelblue", pch = 20, xlab = "Sisaan", ylab = "Order", main = "Sisaan vs Order")
+
+lines(seq(1,47,1), sisaan, col = "red")
+abline(a = 0, b = 0, lwd = 2)
+```
+Normal Q-Q Plot dan histogram menunjukkan bahwa sisaan cenderung menyebar normal. Plot Sisaan vs Fitted Value dan plot antara sisaan vs order menunjukkan adanya autokorelasi karena terdapat pola antar sisaan. 
+
+## Uji Formal Normality Test
+```{r}
+#H0: sisaan mengikuti sebaran normal
+#H1: sisaan tidak mengikuti sebaran normal
+ks.test(sisaan, "pnorm", mean=mean(sisaan), sd=sd(sisaan))
+```
+Berdasarkan tes normalitas dengan Kolmogorov-Smirnov Test didapatkan nilai *p-value* \> $\alpha$ (5%), artinya cukup bukti untuk menyatakan sisaan menyebar normal.
+
+```{r}
+#ACF dan PACF identifikasi autokorelasi
+par(mfrow = c(1,2))
+acf(sisaan)
+pacf(sisaan)
+```
+Berdasarkan plot ACF dan PACF, terlihat bahwa garis melewati batas selang berwarna biru. Itu artinya, terjadi autokorelasi. 
+
+```{r}
+#uji-Durbin Watson
+#H0: tidak ada autokorelasi
+#H1: ada autokorelasi
+dwtest(model)
+```
+Berdasarkan hasil Durbin-Watson Test, didapatkan nilai p-value = $9.301e-08$ < alpha 5%, artinya terjadi autokorelasi. Didapatkan juga nilai $DW = 0.77664$. Berdasarkan tabel Durbin-Watson diperoleh nilai $DL = 1.3989$ dan $DU = 1.6692$. Nilai DW berada di antara nilai 0 dan DL. Artinya, terjadi autokorelasi positif.
+
+## Penanganan Autokorelasi
+### Metode Cochrane-Orcutt
+```{r}
+#Penanganan Autokorelasi Cochrane-Orcutt
+modelCO<-cochrane.orcutt(model)
+modelCO
+dwtest(modelCO)
+```
+Model menggunakan Cochrane-Orcutt $$y_i=-7.124883e-05+3.599657e+02x1_t-2.399670e-01x2_t-1.478111e+04x3_t$$.
+
+Nilai DW setelah dilakukan penanganan meningkat menjadi $DW = 1.8513$. Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.3989 < DW < 2.3308$, maka sudah tidak ada autokorelasi positif. Hal tersebut juga didukung oleh *p-value* sebesar $0.2534$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
+
+```{r}
+#Rho optimum
+rho<- modelCO$rho
+rho
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+#Transformasi Manual
+Year.trans<- data$Year[-1]-data$Year[-47]*rho
+Total.trans<- data$Total[-1]-data$Total[-47]*rho
+Bunker_fuels.trans<- data$Bunker_fuels[-1]-data$Bunker_fuels[-47]*rho
+Per_Capita.trans<- data$Per_Capita[-1]-data$Per_Capita[-47]*rho
+
+
+modelCOmanual<- lm(Bunker_fuels.trans~Year.trans+Total.trans+Per_Capita.trans)
+summary(modelCOmanual)
+```
+Hasil model transformasi bukan merupakan model sesungguhnya. Koefisien regresi masih perlu dicari kembali mengikuti $β_0^*=β_0+ρ ̂β_0$ dan $β_1^*=β_1$.
+```{r}
+#Mencari Penduga Koefisien Regresi setelah Transformasi ke Persamaan Awal
+b0bintang <- modelCOmanual$coefficients[-c(2,3,4)]
+b0 <- b0bintang/(1-rho)
+b1 <- modelCOmanual$coefficients[-c(1,3,4)]
+b2 <- modelCOmanual$coefficients[-c(1,2,4)]
+b3 <- modelCOmanual$coefficients[-c(1,2,3)]
+b0
+b1
+b2
+b3
+```
+Penanganan autokorelasi menggunakan fungsi dan manual menunjukkan hasil yang sama. 
+
+### Metode Hildreth-Lu
+```{r}
+#Penanganan Autokorelasi Hildreth lu
+# Hildreth-Lu
+hildreth.lu.func<- function(r, model){
+  x1 <- model.matrix(model)[,2]
+  x2 <- model.matrix(model)[,3]
+  x3 <- model.matrix(model)[,4]
+  y <- model.response(model.frame(model))
+  n <- length(y)
+  t <- 2:n
+  y <- y[t]-r*y[t-1]
+  x1 <- x1[t]-r*x1[t-1]
+  x2 <- x2[t]-r*x2[t-1]
+  x3 <- x3[t]-r*x3[t-1]
+  
+  return(lm(y~x1+x2+x3))
+}
+
+#Pencariab rho yang meminimumkan SSE
+r <- c(seq(0.1,0.9, by= 0.1))
+tab <- data.frame("rho" = r, "SSE" = sapply(r, function(i){deviance(hildreth.lu.func(i, model))}))
+round(tab, 4)
+```
+Pertama-tama akan dicari di mana kira-kira $ρ$ yang menghasilkan SSE minimum. Pada hasil di atas terlihat $ρ$ minimum ketika 0.9. Namun, hasil tersebut masih kurang teliti sehingga akan dicari kembali $ρ$ yang lebih optimum dengan ketelitian yang lebih. Jika sebelumnya jarak antar $ρ$ yang dicari adalah 0.1, kali ini jarak antar $ρ$ adalah 0.001 dan dilakukan pada selang 0.8 sampai dengan 0.9.
+
+```{r}
+#Rho optimal di sekitar 0.4
+rOpt <- seq(0.8,0.9, by= 0.001)
+tabOpt <- data.frame("rho" = rOpt, "SSE" = sapply(rOpt, function(i){deviance(hildreth.lu.func(i, model))}))
+head(tabOpt[order(tabOpt$SSE),])
+
+#Grafik SSE optimum
+par(mfrow = c(1,1))
+plot(tab$SSE ~ tab$rho , type = "l", xlab = "Rho", ylab = "SSE")
+abline(v = tabOpt[tabOpt$SSE==min(tabOpt$SSE),"rho"], lty = 2, col="red",lwd=2)
+text(x=0.922, y=12198946.5, labels = "rho=0.922", cex = 0.8)
+```
+Perhitungan yang dilakukan aplikasi `R` menunjukkan bahwa nilai $ρ$ optimum, yaitu saat SSE terkecil terdapat pada nilai $ρ=0.900$. Hal tersebut juga ditunjukkan pada plot. Selanjutnya, model dapat didapatkan
+dengan mengevaluasi nilai $ρ$ ke dalam fungsi `hildreth.lu.func`, serta dilanjutkan dengan pengujian autokorelasi dengan uji Durbin-Watson. Namun, setelah pengecekan tersebut tidak lupa koefisien regresi tersebut digunakan untuk transformasi balik. Persamaan hasil transformasi itulah yang menjadi persamaan sesungguhnya.
+
+```{r}
+#Model terbaik
+modelHL <- hildreth.lu.func(0.900, model)
+summary(modelHL)
+
+#Transformasi Balik
+cat("y = ", coef(modelHL)[1]/(1-0.900), "+", coef(modelHL)[2],"x1","+", coef(modelHL)[3],"x2","+", coef(modelHL)[4],"x3", sep = "")
+```
+Setelah dilakukan tranformasi balik, didapatkan model dengan metode Hildreth-Lu sebagai berikut. $$y_i=-663525.8+335.5404x1_t-0.2123179x2_t+13222.69x3_t$$
+
+```{r}
+#Deteksi autokorelasi
+dwtest(modelHL)
+```
+Hasil uji Durbin-Watson juga menunjukkan bahwa nilai DW meningkat menjadi $1.8317$.
+Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.3989 < DW < 2.3308$, maka sudah tidak ada autokorelasi positif. Hal tersebut juga didukung oleh *p-value* sebesar $0.2534$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
+
+Terakhir, akan dibandingkan nilai SSE dari ketiga metode (metode awal,
+metode Cochrane-Orcutt, dan Hildreth-Lu).
+```{r}
+#Perbandingan
+sseModelawal <- anova(model)$`Sum Sq`[-c(1,2,3)]
+sseModelCO <- anova(modelCOmanual)$`Sum Sq`[-c(1,2,3)]
+sseModelHL <- anova(modelHL)$`Sum Sq`[-c(1,2,3)]
+mseModelawal <- sseModelawal/length(data$Bunker_fuels)
+mseModelCO <- sseModelCO/length(data$Bunker_fuels)
+mseModelHL <- sseModelHL/length(data$Bunker_fuels)
+akurasi <- matrix(c(sseModelawal,sseModelCO,sseModelHL,
+                    mseModelawal,mseModelCO,mseModelHL),nrow=2,ncol=3,byrow = T)
+colnames(akurasi) <- c("Model Awal", "Model Cochrane-Orcutt", "Model Hildreth-Lu")
+row.names(akurasi) <- c("SSE","MSE")
+akurasi
+```
+Berdasarkan hasil tersebut dapat diketahui bahwa hasil penanganan autokorelasi dengan metode Cochrane-Orcutt dan Hildreth-Lu memiliki nilai SSE yang tidak jauh berbeda atau cenderung sama, sebesar $12149381.2$ pada metode Cochrane-Orcutt dan $12198946.5$ pada metode Hildreth-Lu. Nilai tersebut lebih baik dibandingkan model awal ketika autokorelasi masih terjadi, yaitu sebesar $44544987.7$.
+
+# Simpulan
+
+
+
