--- a/Praktikum-2/Tugas Pertemuan 2.Rmd
+++ b/Praktikum-2/Tugas Pertemuan 2.Rmd
@@ -21,7 +21,7 @@ library(RColorBrewer)
 library(scales)
 ```
 ## Input Data
-Data yang digunakan adalah data CO2 Emissions from Fossil Fuels di United Kingdom pada tahun 1968-2014. Dengan peubah y yaitu jumlah Bunker fuels, kemudian x1 yaitu Tahun, x2 yaitu Emisi karbon per capita, dan X3 yaitu jumlah gas flaring yang dihasilkan.
+Data yang digunakan adalah data CO2 Emissions from Fossil Fuels di United States of America pada tahun 1968-2014. Dengan peubah y yaitu jumlah Bunker fuels, kemudian x1 yaitu Tahun, x2 yaitu Emisi karbon per capita, dan X3 yaitu jumlah Gas flaring yang dihasilkan.
 ```{r}
 library(rio)
 data <- import("https://raw.githubusercontent.com/yasminazimah/MPDW//main/Praktikum-2/data2.csv")
@@ -64,10 +64,10 @@ Plot time series di atas berpola tren.
 model<- lm(Bunker_fuels~Year+Per_Capita+Gas_flaring, data = data)
 summary(model)
 ```
-$$y_i = -596000+296.9x1_t+5010x2_t-0.4298x3_t$$
+$$y_i = -1515000+755x1_t+7882x2_t-0.1726x3_t$$
 Berdasarkan ringkasan model dapat diketahui bahwa hasil uji F memiliki *p-value* \< $\alpha$ (5%). Artinya, minimal terdapat satu variabel yang berpengaruh nyata terhadap model.
 
-Selanjutnya dapat dilihat juga nilai $R^2=0.8057$. Artinya, sebesar 80.57% keragaman jumlah Bunkel fuels dapat dijelaskan oleh peubah Tahun, Per capita, san Gas flaring. Hasil ini menunjukkan hasil yang bagus, seolah mendapatkan hasil terbaik. Namun, kita perlu melakukan uji terhadap sisaannya seperti berikut ini.
+Selanjutnya dapat dilihat juga nilai $R^2=0.7562$. Artinya, sebesar 75.62% keragaman jumlah Bunkel fuels dapat dijelaskan oleh peubah Tahun, Per capita, san Gas flaring. 
 
 ```{r}
 #sisaan dan fitted value
@@ -89,7 +89,7 @@ plot(seq(1,47,1), sisaan, col = "steelblue", pch = 20, xlab = "Sisaan", ylab = "
 lines(seq(1,47,1), sisaan, col = "red")
 abline(a = 0, b = 0, lwd = 2)
 ```
-Normal Q-Q Plot yang dihasilkan menunjukkan bahwa sisaan cenderung menyebar normal. Plot Sisaan vs Fitted Value dan plot antara sisaan vs order menunjukkan adanya autokorelasi karena terdapat pola antar sisaan. 
+Normal Q-Q Plot dan histogram yang dihasilkan menunjukkan bahwa sisaan cenderung menyebar normal. Plot Sisaan vs Fitted Value dan plot antara sisaan vs order menunjukkan adanya autokorelasi karena terdapat pola antar sisaan. 
 
 ## Uji Formal Normality Test
 ```{r}
@@ -113,7 +113,7 @@ Berdasarkan plot ACF dan PACF, terlihat bahwa garis melewati batas selang berwar
 #H1: ada autokorelasi
 dwtest(model)
 ```
-Berdasarkan hasil Durbin-Watson Test, didapatkan nilai p-value = $2.2e-16$ < alpha 5%, artinya terjadi autokorelasi. Didapatkan juga nilai $DW = 0.29539$. Berdasarkan tabel Durbin-Watson dengan k=3 dan jumlah data 47, diperoleh nilai $DL = 1.3989$ dan $DU = 1.6692$. Nilai DW berada di antara nilai 0 dan DL. Artinya, terjadi autokorelasi positif.
+Berdasarkan hasil Durbin-Watson Test, didapatkan nilai p-value = $2.9e-11$ < alpha 5%, artinya terjadi autokorelasi. Didapatkan juga nilai $DW = 0.53486$. Berdasarkan tabel Durbin-Watson dengan k=3 dan jumlah data 47, diperoleh nilai $DL = 1.3989$ dan $DU = 1.6692$. Nilai DW berada di antara nilai 0 dan DL. Artinya, terjadi autokorelasi positif.
 
 ## Penanganan Autokorelasi
 ### Metode Cochrane-Orcutt
@@ -123,9 +123,9 @@ modelCO<-cochrane.orcutt(model)
 modelCO
 dwtest(modelCO)
 ```
-Model menggunakan Cochrane-Orcutt $$y_i=-458639.7+232.7415x1_t+823.1627x2_t+0.001507x3_t$$.
+Model menggunakan Cochrane-Orcutt $$y_i=-1513456+753.5430x1_t+8171.967x2_t-0.5236520x3_t$$.
 
-Nilai DW setelah dilakukan penanganan meningkat menjadi $DW = 1.9548$. Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.6692 < DW < 2.3308$, maka sudah tidak ada autokorelasi. Hal tersebut juga didukung oleh *p-value* sebesar $0.3815$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
+Nilai DW setelah dilakukan penanganan meningkat menjadi $DW = 1.762$. Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.6692 < DW < 2.3308$, maka sudah tidak ada autokorelasi. Hal tersebut juga didukung oleh *p-value* sebesar $0.1366$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
 
 ```{r}
 #Rho optimum
@@ -182,11 +182,11 @@ r <- c(seq(0.1,0.9, by= 0.1))
 tab <- data.frame("rho" = r, "SSE" = sapply(r, function(i){deviance(hildreth.lu.func(i, model))}))
 round(tab, 4)
 ```
-Pertama-tama akan dicari di mana kira-kira $ρ$ yang menghasilkan SSE minimum. Pada hasil di atas terlihat $ρ$ minimum ketika 0.9. Namun, hasil tersebut masih kurang teliti sehingga akan dicari kembali $ρ$ yang lebih optimum dengan ketelitian yang lebih. Jika sebelumnya jarak antar $ρ$ yang dicari adalah 0.1, kali ini jarak antar $ρ$ adalah 0.001 dan dilakukan pada selang 0.8 sampai dengan 0.9.
+Pertama-tama akan dicari di mana kira-kira $ρ$ yang menghasilkan SSE minimum. Pada hasil di atas terlihat $ρ$ minimum ketika 0.7. Namun, hasil tersebut masih kurang teliti sehingga akan dicari kembali $ρ$ yang lebih optimum dengan ketelitian yang lebih. Jika sebelumnya jarak antar $ρ$ yang dicari adalah 0.1, kali ini jarak antar $ρ$ adalah 0.001 dan dilakukan pada selang 0.5 sampai dengan 0.9.
 
 ```{r}
 #Rho optimal di sekitar 0.9
-rOpt <- seq(0.8,0.9, by= 0.001)
+rOpt <- seq(0.5,0.9, by= 0.001)
 tabOpt <- data.frame("rho" = rOpt, "SSE" = sapply(rOpt, function(i){deviance(hildreth.lu.func(i, model))}))
 head(tabOpt[order(tabOpt$SSE),])
 
@@ -194,27 +194,27 @@ head(tabOpt[order(tabOpt$SSE),])
 par(mfrow = c(1,1))
 plot(tab$SSE ~ tab$rho , type = "l", xlab = "Rho", ylab = "SSE")
 abline(v = tabOpt[tabOpt$SSE==min(tabOpt$SSE),"rho"], lty = 2, col="red",lwd=2)
-text(x=0.9, y=12478591, labels = "rho=0.9", cex = 0.8)
+text(x=0.728, y=488171088, labels = "rho=0.728", cex = 0.8)
 ```
-Perhitungan yang dilakukan aplikasi `R` menunjukkan bahwa nilai $ρ$ optimum, yaitu saat SSE terkecil terdapat pada nilai $ρ=0.900$. Hal tersebut juga ditunjukkan pada plot. Selanjutnya, model dapat didapatkan
+Perhitungan yang dilakukan aplikasi `R` menunjukkan bahwa nilai $ρ$ optimum, yaitu saat SSE terkecil terdapat pada nilai $ρ=0.729$. Hal tersebut juga ditunjukkan pada plot. Selanjutnya, model dapat didapatkan
 dengan mengevaluasi nilai $ρ$ ke dalam fungsi `hildreth.lu.func`, serta dilanjutkan dengan pengujian autokorelasi dengan uji Durbin-Watson. Namun, setelah pengecekan tersebut tidak lupa koefisien regresi tersebut digunakan untuk transformasi balik. Persamaan hasil transformasi itulah yang menjadi persamaan sesungguhnya.
 
 ```{r}
 #Model terbaik
-modelHL <- hildreth.lu.func(0.900, model)
+modelHL <- hildreth.lu.func(0.729, model)
 summary(modelHL)
 
 #Transformasi Balik
-cat("y = ", coef(modelHL)[1]/(1-0.900), "+", coef(modelHL)[2],"x1","+", coef(modelHL)[3],"x2","+", coef(modelHL)[4],"x3", sep = "")
+cat("y = ", coef(modelHL)[1]/(1-0.729), "+", coef(modelHL)[2],"x1","+", coef(modelHL)[3],"x2","+", coef(modelHL)[4],"x3", sep = "")
 ```
-Setelah dilakukan tranformasi balik, didapatkan model dengan metode Hildreth-Lu sebagai berikut. $$y_i=-456254.8+231.5577x1_t+845.1527x2_t+0.001243035x3_t$$
+Setelah dilakukan tranformasi balik, didapatkan model dengan metode Hildreth-Lu sebagai berikut. $$y_i=-1513347+753.4908x1_t+8170.742x2_t-0.5233208x3_t$$
 
 ```{r}
 #Deteksi autokorelasi
 dwtest(modelHL)
 ```
-Hasil uji Durbin-Watson juga menunjukkan bahwa nilai DW meningkat menjadi $1.9449$.
-Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.6692 < DW < 2.3308$, maka sudah tidak ada autokorelasi positif. Hal tersebut juga didukung oleh *p-value* sebesar $0.3683$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
+Hasil uji Durbin-Watson juga menunjukkan bahwa nilai DW meningkat menjadi $1.7623$.
+Nilai DW sudah berada pada rentang DU \< DW \< 4-DU atau $1.6692 < DW < 2.3308$, maka sudah tidak ada autokorelasi. Hal tersebut juga didukung oleh *p-value* sebesar $0.1368$, di mana *p-value* \> $\alpha$=5%. Artinya tak tolak $H_0$ atau belum cukup bukti menyatakan bahwa ada autokorelasi pada taraf nyata 5%.
 
 Terakhir, akan dibandingkan nilai SSE dari ketiga metode (metode awal,
 metode Cochrane-Orcutt, dan Hildreth-Lu).
@@ -232,9 +232,9 @@ colnames(akurasi) <- c("Model Awal", "Model Cochrane-Orcutt", "Model Hildreth-Lu
 row.names(akurasi) <- c("SSE","MSE")
 akurasi
 ```
-Berdasarkan hasil tersebut dapat diketahui bahwa hasil penanganan autokorelasi dengan metode Cochrane-Orcutt dan Hildreth-Lu memiliki nilai SSE yang tidak jauh berbeda atau cenderung sama, sebesar $12474032.5$ pada metode Cochrane-Orcutt dan $12478592.4$ pada metode Hildreth-Lu. Nilai tersebut lebih baik dibandingkan model awal ketika autokorelasi masih terjadi, yaitu sebesar $69811722$.
+Berdasarkan hasil tersebut dapat diketahui bahwa hasil penanganan autokorelasi dengan metode Cochrane-Orcutt dan Hildreth-Lu memiliki nilai SSE yang tidak jauh berbeda atau cenderung sama, sebesar $487453326$ pada metode Cochrane-Orcutt dan $487453342$ pada metode Hildreth-Lu. Nilai tersebut lebih baik dibandingkan model awal ketika autokorelasi masih terjadi, yaitu sebesar $1040814927$.
 
 # Simpulan
-Autokorelasi yang terdapat pada data CO2 Emissions from Fossil Fuels di United Kingdom terjadi akibat adanya korelasi di antara unsur penyusunnya. Adanya autokorelasi menyebabkan model regresi kurang baik karena akan meingkatkan galatnya. Autokorelasi dapat dideteksi secara eksploratif melalui plot sisaan, ACF, dan PACF, serta dengan uji formal Durbin-Watson. Autokorelasi tersebut dapat ditangani dengan metode Cochrane-Orcutt dan Hildreth-Lu. Kedua metode menghasilkan nilai SSE yang tidak jauh berbeda, artinya keduanya baik untuk digunakan.
+Autokorelasi yang terdapat pada data CO2 Emissions from Fossil Fuels di United States of America terjadi akibat adanya korelasi di antara unsur penyusunnya. Adanya autokorelasi menyebabkan model regresi kurang baik karena akan meingkatkan galatnya. Autokorelasi dapat dideteksi secara eksploratif melalui plot sisaan, ACF, dan PACF, serta dengan uji formal Durbin-Watson. Autokorelasi tersebut dapat ditangani dengan metode Cochrane-Orcutt dan Hildreth-Lu. Kedua metode menghasilkan nilai SSE yang tidak jauh berbeda, artinya keduanya baik untuk digunakan.
 
 
